--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import '@clerk/themes/shadcn.css';
+@import "@clerk/themes/shadcn.css";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
@@ -116,6 +116,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-mono;
   }
 }
